<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_trip_background"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="20dp"
        android:gravity="center">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_expense"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:textSize="25sp"
            android:textStyle="bold"
            app:fontFamily="@font/roboto_bold"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtExpenseType"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="15dp"
            android:hint="@string/expense_type"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtExpenseAmount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="15dp"
            android:hint="@string/expense_amount"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtExpenseTime"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="15dp"
            android:editable="false"
            android:hint="@string/expense_time"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtExpenseComment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="15dp"
            android:hint="@string/expense_comment"
            android:textColor="@color/black"
            android:textColorHint="@color/black"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/cancel_title"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:background="@color/transparent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddExpense"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:text="@string/add_expense"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:background="@drawable/button_background_1"/>
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>