<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:paddingBottom="40dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAddTripTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/add_trip_desc"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_bold"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtTripName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/name_of_trip"
                app:layout_constraintTop_toBottomOf="@id/tvAddTripTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDestination"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/destination"
                app:layout_constraintTop_toBottomOf="@id/edtTripName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDateOfTrip"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:editable="false"
                android:hint="@string/date_of_trip"
                app:layout_constraintTop_toBottomOf="@id/edtDestination"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@id/edtDateOfTrip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtRisk"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:hint="Required risk"
                app:layout_constraintTop_toBottomOf="@id/edtDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAddTrip"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/add_trip"
                android:textAllCaps="false"
                android:textColor="#FFEB3B"
                android:background="@color/transparent"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/edtRisk"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>