<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context="com.example.comp1786cw1project3.feature.trip_detail.TripDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-93dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingBottom="40dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTripDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/trip_detail"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtTripName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTripDetail" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDestination"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtTripName" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDateOfTrip"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtDestination" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtDateOfTrip" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvIsRequiredRisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/required_risk_desc"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <CheckBox
                android:id="@+id/cbRequiredRisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/tvIsRequiredRisk"
                app:layout_constraintStart_toEndOf="@id/tvIsRequiredRisk"
                app:layout_constraintTop_toTopOf="@id/tvIsRequiredRisk" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvExpense"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginVertical="15dp"
                tools:itemCount="5"
                tools:listitem="@layout/item_expense"
                app:layout_constraintTop_toBottomOf="@id/tvIsRequiredRisk" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDeleteTrip"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:background="@color/transparent"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/rvExpense" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnUpdateTrip"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:src="@drawable/ic_add"
                android:textAllCaps="false"
                android:text="Edit this trip"
                android:background="@color/transparent"
                app:layout_constraintTop_toBottomOf="@id/edtDescription"/>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/btnUpdateTrip"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnAddExpense"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_add"
                    android:textAllCaps="false"
                    android:text="@string/add_expense"
                    android:background="@color/transparent"
                    app:layout_constraintTop_toBottomOf="@id/tvIsRequiredRisk"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnTakePicture"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="60dp"
                    android:text="@string/add_image"
                    android:textAllCaps="false"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_image"
                    app:layout_constraintTop_toBottomOf="@id/edtDescription"/>
            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/lnButton"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>